welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:4: error: Unit does not take parameters
  if (estSurBiscuit() && porteBiscuit()){avance()();poseBiscuit();avance()}
                                                 ^